--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,9 @@
     --ring: 221.2 83.2% 53.3%;
 
     --radius: 0.5rem;
+
+    /* --theme-color: rgb(38, 117, 149, 0.75); */
+    --theme-color: #8c9eb9;
   }
 
   .dark {
