--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,19 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+body > div {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 @layer base {
   * {
     @apply border-border;
