init orders table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -264,3 +264,14 @@ table {
   text-decoration: underline;
   cursor: pointer;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
